<resources>
    <string name="app_name">Forum</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="background">background</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="write_message">Write message</string>
    <string name="send_button">send button</string>
    <string name="tab_layout">Tab layout</string>
</resources>